# lpp

./: .gitignore  LICENSE  MANIFEST.in  README.md  coverage.json  deploy.sh  graph_visualizer.html  pyproject.toml  setup.py  setup_uv.sh  test_all.sh
.claude/agents/: lppcoder.md  lppoperator.md
docs/: cli_reference.md  policy_theory.md  schema_v0.1.md  whitepaper.md
docs/agent/: build_rules.md
docs/schema/: assembly_schema_v0.1.md  schema_v0.1.2.md  schema_v0.1.3.md  schema_v0.2.0.md
examples/assembly/payment_workflow/: README.md  payment_workflow.json
examples/math_compute/: interactive.py  math_compute.json  test_compiled.py
examples/policies/: llm_chat_example.py
examples/python/discovery_shopping/: README.md  app.py  discovery_shopping.json  interactive.py  manifesto.txt  test_flow.py
examples/python/math_compute/: README.md  interactive.py  math_compute.json  test_compiled.py
examples/python/visualizer/: visualizer.json
examples/visualizer/src/: __init__.py
results/: dashboard.html  diagram.mmd
src/blueprints/: README.md  all_blueprints.txt
src/blueprints/core_jsons/: compiler_blueprint.json  loader_blueprint.json  lpp_core_blueprint.json  orchestrator_blueprint.json  safe_eval_blueprint.json  schema_blueprint.json  tla_validator_blueprint.json  validator_blueprint.json  visualizer_blueprint.json
src/frame_py/: __init__.py  assembly_validator.py  compiler.py  loader.py  lpp_core.py  operational_validator.py  orchestrator.py  safe_eval.py  schema.py  tla_validator.py  validator.py  visualizer.py
src/frame_py/initial/: loader.py  lpp_core.py  safe_eval.py  schema.py  validator.py
src/frame_py/tlaps_seals/: README.md  compiler_seal.json  loader_seal.json  lpp_core_seal.json  lpp_visualizer_seal.json  orchestrator_seal.json  research_scraper_seal.json  safe_eval_seal.json  schema_seal.json  seal_log.md  skill_registry_seal.json  tla_validator_seal.json  validator_seal.json  visualizer_seal.json
src/lpp/: __init__.py  cli.py
src/lpp/agent/: __init__.py  cli.py
src/lpp/core/: __init__.py  atoms.py  compiler.py  orchestrator.py  safe_eval.py  visualizer.py
src/lpp/miner/: __init__.py
src/lpp/policies/: README.md  __init__.py  api_gateway.json  llm_governance.json  service_router.json
src/lpp/util/: __init__.py  dashboard.html
src/lpp/workflow/: __init__.py
tests/: conftest.py  test_cli.py  test_state_machine_analyzer.py  test_testgen_coverage.py
utils/: analysis_report.md  build_skill.sh  dashboard.html  deploy.sh  function_dependencies.html  function_graph.html  regenerate_docs.py  utils_inspection.py
utils/blueprint_builder/: README.md  blueprint_builder.json
utils/blueprint_builder/results/: blueprint_builder.mmd  blueprint_builder_compiled.py  blueprint_builder_diagram.html  blueprint_builder_functions.html  blueprint_builder_graph.html  blueprint_builder_logic_graph.html  blueprint_builder_simple.mmd
utils/blueprint_builder/src/: __init__.py  blueprint_builder_compute.py
utils/blueprint_builder/tla/: blueprint_builder.cfg  blueprint_builder.tla  blueprint_builder_proofs.tla
utils/blueprint_composer/: README.md  blueprint_composer.json  interactive.py
utils/blueprint_composer/results/: blueprint_composer.mmd  blueprint_composer_compiled.py  blueprint_composer_diagram.html  blueprint_composer_functions.html  blueprint_composer_graph.html  blueprint_composer_logic_graph.html  blueprint_composer_simple.mmd  composer_compute_functions.json
utils/blueprint_composer/src/: __init__.py  composer_compute.py
utils/blueprint_composer/tests/: child_processor.json  parent_workflow.json  (+1 more)
utils/blueprint_debugger/: README.md  blueprint_debugger.json  interactive.py
utils/blueprint_differ/: README.md  blueprint_differ.json
utils/blueprint_linter/: README.md  blueprint_linter.json  interactive.py
utils/blueprint_playground/: README.md  blueprint_playground.json  interactive.py
utils/blueprint_registry/: README.md  blueprint_registry.json  interactive.py
utils/compliance_checker/: README.md  compliance_checker.json  interactive.py
utils/coverage_analyzer/: README.md  coverage_analyzer.json  interactive.py
utils/dashboard/: README.md  dashboard.json  interactive.py
utils/doc_generator/: README.md  doc_generator.json  interactive.py
utils/event_simulator/: README.md  event_simulator.json
utils/execution_tracer/: README.md  execution_tracer.json
utils/function_decoder/: README.md  function_decoder.json  interactive.py
utils/graph_visualizer/: README.md  graph_visualizer.json  interactive.py
utils/legacy_extractor/: README.md  interactive.py  legacy_extractor.json
utils/llm_assistant/: README.md  llm_assistant.json  structure.txt
utils/logic_decoder/: README.md  logic_decoder.json
utils/policy_generator/: interactive.py  policy_generator.json
utils/research_scraper/: README.md  interactive.py  research_scraper.json
utils/schema_migrator/: README.md  interactive.py  migrate_to_v020.py  schema_migrator.json
utils/scholar_chat/: README.md  interactive.py  scholar_chat.json  test_tla.py
utils/skill_contractor/: README.md  manifesto.txt  skill_contractor.json
utils/skill_registry/: README.md  interactive.py  skill_registry.json
utils/task_orchestrator/: README.md  task_orchestrator.json
utils/test_generator/: README.md  comprehensive_test.py  interactive.py  test_generator.json
utils/tlaps_prover/: tlaps_proof_generator.py
utils/tlaps_seal/: README.md  interactive.py  menifesto.md  run_core_seals.py  tlaps_seal.json
utils/visualizer/: README.md  interactive.py  readme_generator.json  visualizer.json
workflows/: README.md
workflows/logic_vulnerability_pointer/: README.md  batch_audit.py  interactive.py  logic_vulnerability_pointer.json
workflows/lpp_canvas/: README.md  app.py  interactive.py  lpp_canvas.json
workflows/python_to_lpp/: DESIGN.md  README.md  interactive.py  python_to_lpp.json
(+569 files in other folders)
