[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpp"
version = "1.0.0"
description = "L++ - The Universal Deterministic Logic Workflow Machine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "L++ Team", email = "lpp@example.com"}
]
keywords = [
    "state-machine",
    "workflow", 
    "logic",
    "deterministic",
    "blueprint",
    "compiler",
    "fsm",
    "business-logic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

# Core has zero dependencies - stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
llm = [
    "openai>=1.0",
]
all = [
    "openai>=1.0",
    "pytest>=7.0",
]

[project.scripts]
lpp-compile = "frame_py.compiler:main"
lpp-visualize = "frame_py.visualizer:main"

[project.urls]
Homepage = "https://github.com/lpp-project/lpp"
Documentation = "https://github.com/lpp-project/lpp#readme"
Repository = "https://github.com/lpp-project/lpp"
Issues = "https://github.com/lpp-project/lpp/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov=utils --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src", "utils"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/results/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
fail_under = 0
